# TraceModel

./: .gitattributes  .readthedocs.yaml  Makefile  README.md  pyproject.toml  setup.py
docs/: conf.py  index.rst  requirements.txt  traceHMM.test.rst
docs/_build/doctrees/: environment.pickle  index.doctree  main.doctree  modules.doctree  traceHMM.doctree  traceHMM.test.doctree  traceHMM.utils.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  main.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  traceHMM.html  traceHMM.test.html  traceHMM.utils.html
docs/source/: api.rst  conf.py  index.rst  modules.rst  traceHMM.rst
docs/source/_autosummary/: traceHMM.model.rst  traceHMM.rst  traceHMM.utils.plot.rst  traceHMM.utils.rst  traceHMM.utils.utils.rst
docs/source/jupyter/: gabriele_et_al.rst  mach_et_al.rst  simulations.rst
docs/source/markdown/: install.md
notebooks/: gabriele_et_al.ipynb  mach_et_al.ipynb  simulations.ipynb
scripts/: jupyterrst.sh
traceHMM/: __init__.py  _utils.py  model.py  test.py
traceHMM/cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  update.cpp
traceHMM/test/: testModel.py  testUtils.py
traceHMM/utils/: func.py  plot.py  utils.py
